# Graphic-engine

./: CMakeLists.txt  README.md
shaders/: basic.frag
src/: main.c
src/core/: configuration.c  configuration.h  renderer.c  renderer.h  scene.c  scene.h  window.c  window.h
src/graphics/: mesh.c  mesh.h  shader.c  shader.h
src/primitives/: geometry.c  geometry.h  object.h  primitives.h
src/primitives/2D/: triangle.c
src/primitives/3D/: cone.c
src/primitives/3D/polyedres/: cube.c  pyramide.c
src/primitives/3D/spheres/: icosphere.c  sphere_uv.c
